# pdf-to-audio

./: .env.example  .gitignore  README.md  pyproject.toml
src/pdf_to_audio/: __main__.py
src/pdf_to_audio/config/: settings.py
src/pdf_to_audio/extraction/: pdf_extractor.py
src/pdf_to_audio/llm/: chunker.py  client.py  content_guard.py  exceptions.py  processor.py
src/pdf_to_audio/pipeline/: runner.py  steps.py
src/pdf_to_audio/templates/: template_loader.py
src/pdf_to_audio/templates/config/: defaults.json  runtime.json
src/pdf_to_audio/templates/prompts/: clean_chunk.txt
src/pdf_to_audio/tts/: synthesizer.py
tests/unit/: test_chunker.py  test_pdf_extractor.py  test_processor.py  test_synthesizer.py
