[project]
name = "pdf-to-audio"
version = "0.1.0"
description = "Convert PDF files to audio via text extraction, LLM cleaning, and TTS synthesis."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "better-profanity>=0.7.0",
    "edge-tts>=7.2.8",
    "jinja2>=3.1.0",
    "openai>=2.30.0",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.9.0",
]

[project.scripts]
pdf-to-audio = "pdf_to_audio.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_to_audio"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
